# ChunkEdge

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  clippy.toml
crates/chunkedge_advancement/: Cargo.toml  README.md
crates/chunkedge_advancement/src/: event.rs  lib.rs
crates/chunkedge_binary/: Cargo.toml
crates/chunkedge_binary/src/: id_or.rs  id_set.rs  lib.rs  text_component.rs  var_int.rs  var_long.rs
crates/chunkedge_binary/src/impls/: math.rs  other.rs  string.rs
crates/chunkedge_boss_bar/: Cargo.toml  README.md
crates/chunkedge_boss_bar/src/: components.rs  lib.rs
crates/chunkedge_build_utils/: Cargo.toml  README.md
crates/chunkedge_command/: Cargo.toml  README.md
crates/chunkedge_command/src/: graph.rs  handler.rs  manager.rs  parsers.rs  scopes.rs
crates/chunkedge_command/src/parsers/: color.rs  gamemode.rs  strings.rs
crates/chunkedge_entity/: Cargo.toml  README.md  build.rs
crates/chunkedge_entity/src/: active_status_effects.rs  attributes.rs  hitbox.rs  lib.rs  query.rs  tracked_data.rs
crates/chunkedge_equipment/: Cargo.toml  README.md
crates/chunkedge_equipment/src/: interaction_broadcast.rs  inventory_sync.rs  lib.rs
crates/chunkedge_generated/: Cargo.toml  README.md
crates/chunkedge_generated/src/: block.rs
crates/chunkedge_item/: Cargo.toml
crates/chunkedge_item/src/: components.rs  impls.rs  lib.rs  stack.rs  vanilla_components.rs
crates/chunkedge_player_list/: Cargo.toml  README.md
crates/chunkedge_player_list/src/: lib.rs
crates/chunkedge_registry/: Cargo.toml  README.md
crates/chunkedge_registry/src/: biome.rs  codec.rs  dimension_type.rs  lib.rs  tags.rs
crates/chunkedge_scoreboard/: Cargo.toml  README.md
crates/chunkedge_scoreboard/src/: components.rs  lib.rs
crates/chunkedge_server/: Cargo.toml  README.md
crates/chunkedge_server/src/: abilities.rs  action.rs  brand.rs  chunk_view.rs  client.rs  client_command.rs  client_settings.rs  custom_payload.rs  event_loop.rs  hand_swing.rs  interact_block.rs  interact_entity.rs  interact_item.rs  keepalive.rs  layer.rs  lib.rs  message.rs  movement.rs  op_level.rs  resource_pack.rs  spawn.rs  status.rs  status_effect.rs  teleport.rs  title.rs
crates/chunkedge_server/src/layer/: bvh.rs  chunk.rs  entity.rs  message.rs
crates/chunkedge_server/src/layer/chunk/: chunk.rs  loaded.rs  paletted_container.rs  unloaded.rs
crates/chunkedge_text/: Cargo.toml  README.md
crates/chunkedge_text/src/: into_text.rs  lib.rs  tests.rs
crates/valence_advancement/: Cargo.toml
crates/valence_advancement/src/: lib.rs
crates/valence_binary/: Cargo.toml
crates/valence_binary/src/: array.rs  bit_set.rs  id_or.rs  impls.rs  lib.rs  text_component.rs
crates/valence_binary/src/impls/: other.rs  primitive.rs  string.rs
crates/valence_command/: Cargo.toml
crates/valence_command/src/: graph.rs  lib.rs  manager.rs  parsers.rs
crates/valence_command/src/parsers/: angle.rs  block_pos.rs  bool.rs  color.rs  column_pos.rs  entity_anchor.rs  entity_selector.rs  gamemode.rs  inventory_slot.rs  numbers.rs  rotation.rs  score_holder.rs  strings.rs  swizzle.rs  time.rs  vec2.rs  vec3.rs
crates/valence_command_macros/: Cargo.toml
crates/valence_entity/: Cargo.toml  build.rs
crates/valence_entity/src/: active_status_effects.rs  attributes.rs  hitbox.rs  lib.rs  query.rs  tracked_data.rs
crates/valence_generated/: Cargo.toml
crates/valence_generated/src/: lib.rs
crates/valence_item/: Cargo.toml
crates/valence_item/src/: components.rs  impls.rs  lib.rs  stack.rs  vanilla_components.rs
crates/valence_protocol/: Cargo.toml
crates/valence_protocol/src/: block_pos.rs  chunk_pos.rs  chunk_section_pos.rs  decode.rs  difficulty.rs  direction.rs  encode.rs  game_mode.rs  global_pos.rs  hand.rs  lib.rs  movement_flags.rs  profile.rs  sound.rs  velocity.rs
crates/valence_protocol/src/packets/configuration/: client_information_c2s.rs  cookie_request_s2c.rs  cookie_response_c2s.rs  custom_payload_c2s.rs  custom_payload_s2c.rs  custom_report_details_s2c.rs  disconnect_s2c.rs  finish_configuration_c2s.rs  finish_configuration_s2c.rs  keep_alive_c2s.rs  keep_alive_s2c.rs  ping_s2c.rs  pong_c2s.rs  registry_data_s2c.rs  reset_chat_s2c.rs  resource_pack_c2s.rs  resource_pack_pop_s2c.rs  resource_pack_push_s2c.rs  select_known_packs_c2s.rs  select_known_packs_s2c.rs  server_links_s2c.rs  store_cookie_s2c.rs  transfer_s2c.rs  update_enabled_features_s2c.rs  update_tags_s2c.rs
crates/valence_protocol/src/packets/handshake/: intention_c2s.rs
crates/valence_protocol/src/packets/login/: cookie_request_s2c.rs  cookie_response_c2s.rs  custom_query_answer_c2s.rs  custom_query_s2c.rs  hello_c2s.rs  hello_s2c.rs  key_c2s.rs  login_acknowledged_c2s.rs  login_compression_s2c.rs  login_disconnect_s2c.rs  login_finished_s2c.rs
crates/valence_protocol/src/packets/play/: accept_teleportation_c2s.rs  add_entity_s2c.rs  animate_s2c.rs  award_stats_s2c.rs  block_changed_ack_s2c.rs  block_destruction_s2c.rs  block_entity_data_s2c.rs  block_entity_tag_query_c2s.rs  block_event_s2c.rs  boss_event_s2c.rs  (+185 more)
crates/valence_protocol_macros/: Cargo.toml
crates/valence_protocol_macros/src/: decode.rs  encode.rs
crates/valence_registry/: Cargo.toml
crates/valence_registry/src/: tags.rs
crates/valence_scoreboard/: Cargo.toml
crates/valence_scoreboard/src/: lib.rs
crates/valence_server/: Cargo.toml
crates/valence_server/src/: abilities.rs  brand.rs  client.rs  client_settings.rs  custom_payload.rs  event_loop.rs  keepalive.rs  lib.rs  message.rs  resource_pack.rs  spawn.rs  status_effect.rs  teleport.rs  title.rs
crates/valence_server/src/layer/: chunk.rs  entity.rs
crates/valence_server_common/: Cargo.toml
tools/packet_inspector/: Cargo.toml  README.md  build.rs
tools/packet_inspector/src/: app.rs  lib.rs  main.rs  packet_io.rs  packet_registry.rs  tri_checkbox.rs
tools/packet_inspector/src/app/: failed_packets.rs  filter.rs  packet_list.rs  text_viewer.rs
tools/playground/: Cargo.toml
tools/playground/src/: extras.rs  main.rs  playground.template.rs
(+453 files in other folders)
