[package]
name = "chunkedge"
version.workspace = true
edition.workspace = true
description = "A framework for building Minecraft servers in Rust."
documentation.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["minecraft", "gamedev", "server", "ecs"]
categories = ["game-engines"]
include = ["/src", "/benches", "/examples", "/docs", "/README.md", "/LICENSE.txt"]

[lints]
workspace = true

[features]
default = [
  "advancement",
  "anvil",
  "boss_bar",
  "command",
  "equipment",
  "inventory",
  "log",
  "network",
  "player_list",
  "scoreboard",
  "testing",
  "weather",
  "world_border",
]
advancement = ["dep:chunkedge_advancement"]
anvil = ["dep:chunkedge_anvil"]
boss_bar = ["dep:chunkedge_boss_bar"]
equipment = ["dep:chunkedge_equipment"]
inventory = ["dep:chunkedge_inventory"]
log = ["dep:bevy_log"]
network = ["dep:chunkedge_network"]
player_list = ["dep:chunkedge_player_list"]
scoreboard = ["dep:chunkedge_scoreboard"]
world_border = ["dep:chunkedge_world_border"]
command = ["dep:chunkedge_command", "dep:chunkedge_command_macros"]
weather = ["dep:chunkedge_weather"]
testing = []

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log = { workspace = true, optional = true }
bytes.workspace = true
rand.workspace = true
uuid.workspace = true
chunkedge_advancement = { workspace = true, optional = true }
chunkedge_anvil = { workspace = true, optional = true, features = [
  "bevy_plugin",
] }
chunkedge_binary.workspace = true
chunkedge_boss_bar = { workspace = true, optional = true }
chunkedge_command = { workspace = true, optional = true }
chunkedge_command_macros = { workspace = true, optional = true }
chunkedge_ident.workspace = true
chunkedge_equipment = { workspace = true, optional = true }
chunkedge_ident_macros.workspace = true
chunkedge_inventory = { workspace = true, optional = true }
chunkedge_item.workspace = true
chunkedge_lang.workspace = true
chunkedge_network = { workspace = true, optional = true }
chunkedge_player_list = { workspace = true, optional = true }
chunkedge_registry.workspace = true
chunkedge_scoreboard = { workspace = true, optional = true }
chunkedge_server.workspace = true
chunkedge_text.workspace = true
chunkedge_weather = { workspace = true, optional = true }
chunkedge_world_border = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
divan.workspace = true
flume.workspace = true
noise.workspace = true   # For the terrain example.
tracing.workspace = true

[dev-dependencies.reqwest]
workspace = true
default-features = false
features = ["rustls", "blocking", "stream"]

[[bench]]
name = "main"
harness = false

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true


[workspace]
members = ["crates/*", "tools/*"]
exclude = []
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ChunkEdge/ChunkEdge"
documentation = "https://docs.chunkedge.com"
license = "MIT"

[workspace.dependencies]
aes = "0.9.0"
anyhow = { version = "1.0.89", features = ["backtrace"] }
approx = "0.5.1"
arrayvec = "0.7.6"
async-trait = "0.1.82"
atty = "0.2.14"
base64 = "0.22.1"
bevy_app = { version = "0.18.1", default-features = false }
bevy_derive = "0.18.1"
bevy_ecs = { version = "0.18.1", default-features = false, features = [
  "multi_threaded",
] }
bevy_log = { version = "0.18.1" }
bevy_mod_debugdump = { version = "0.15.0" }
bevy_utils = { version = "0.18.1" }
bitfield-struct = "0.13.0"
bitvec = "1.0.1"
byteorder = "1.5.0"
bytes = "1.7.1"
cesu8 = "1.1.0"
cfb8 = "0.9.0"
clap = { version = "4.5.17", features = ["derive"] }
derive_more = "2.1.1"
directories = "6.0.0"
divan = "0.1.14"
eframe = { version = "0.34.1" }
egui = "0.34.1"
egui_dock = "0.19.1"
flate2 = "1.0.33"
flume = "0.12.0"
fs_extra = "1.3.0"
glam = "0.32.1"
heck = "0.5.0"
hmac = "0.13.0"
image = "0.25.2"
indexmap = "2.5.0"
itertools = "0.14.0"
java_string = { path = "crates/java_string", version = "0.1.2" }
lru = "0.16.3"
noise = "0.9.0"
num = "0.4.3"
num-bigint = "0.4.6"
owo-colors = "4.1.0"
ordered-float = "5.3.0"
parking_lot = "0.12.3"
paste = "1.0.15"
petgraph = "0.8.3"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.86"
quote = "1.0.37"
rand = "0.10.0"
rayon = "1.10.0"
regex = "1.10.6"
reqwest = { version = "0.13.2", default-features = false }
rfd = "0.17.2"
rsa = "0.9.6"
rsa-der = "0.3.0"
rustc-hash = "2.0.0"
serde = "1.0.210"
serde-value = "0.7.0"
serde_json = "1.0.128"
sha1 = "0.11.0"
sha2 = "0.11.0"
syn = "2.0.77"
syntect = { version = "5.2.0", default-features = false }
tempfile = "3.12.0"
thiserror = "2.0.18"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["full"] }
toml = "1.1.2+spec-1.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
chunkedge = { path = "." }
chunkedge_advancement = { path = "crates/chunkedge_advancement" }
chunkedge_anvil = { path = "crates/chunkedge_anvil", version = "0.1.0" }
chunkedge_boss_bar = { path = "crates/chunkedge_boss_bar" }
chunkedge_build_utils = { path = "crates/chunkedge_build_utils" }
chunkedge_command = { path = "crates/chunkedge_command" }
chunkedge_command_macros = { path = "crates/chunkedge_command_macros" }
chunkedge_binary = { path = "crates/chunkedge_binary" }
chunkedge_entity = { path = "crates/chunkedge_entity" }
chunkedge_generated = { path = "crates/chunkedge_generated" }
chunkedge_item = { path = "crates/chunkedge_item" }
chunkedge_ident = { path = "crates/chunkedge_ident" }
chunkedge_ident_macros = { path = "crates/chunkedge_ident_macros" }
chunkedge_equipment = { path = "crates/chunkedge_equipment" }
chunkedge_inventory = { path = "crates/chunkedge_inventory" }
chunkedge_lang = { path = "crates/chunkedge_lang" }
chunkedge_math = { path = "crates/chunkedge_math" }
chunkedge_nbt = { path = "crates/chunkedge_nbt", features = [
  "uuid",
  "serde",
] }
chunkedge_network = { path = "crates/chunkedge_network" }
chunkedge_player_list = { path = "crates/chunkedge_player_list" }
chunkedge_protocol = { path = "crates/chunkedge_protocol" }
chunkedge_protocol_macros = { path = "crates/chunkedge_protocol_macros" }
chunkedge_registry = { path = "crates/chunkedge_registry" }
chunkedge_scoreboard = { path = "crates/chunkedge_scoreboard" }
chunkedge_server = { path = "crates/chunkedge_server" }
chunkedge_server_common = { path = "crates/chunkedge_server_common" }
chunkedge_text = { path = "crates/chunkedge_text" }
chunkedge_weather = { path = "crates/chunkedge_weather" }
chunkedge_world_border = { path = "crates/chunkedge_world_border" }
vek = "0.17.1"
zip = "8.5.1"
crc32c = "0.6.8"

[workspace.lints.rust]
# missing_debug_implementations = "warn" # TODO: enable me.`
# missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
# rust_2018_idioms = { level = "warn", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(unstable_doc)'] }
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
bool_to_int_with_if = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
# if_then_some_else_none = "warn" # TODO: Too many false positives.
ignored_unit_patterns = "warn"
impl_trait_in_params = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
# iter_over_hash_type = "warn" # TODO: enable me.
iter_without_into_iter = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_wildcard_for_single_variants = "warn"
mismatching_type_param_order = "warn"
missing_fields_in_debug = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
# multiple_inherent_impl = "warn" TODO: enable me.
mut_mut = "warn"
mutex_atomic = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
negative_feature_names = "warn"
no_mangle_with_rust_abi = "warn"
option_as_ref_cloned = "warn"
pub_underscore_fields = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_else = "warn"
redundant_feature_names = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
struct_field_names = "warn"
tests_outside_test_module = "warn"
# todo = "warn"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
type_complexity = "allow"
# undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_join = "warn"
# unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unseparated_literal_suffix = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
wildcard_dependencies = "warn"
zero_sized_map_values = "warn"

[workspace.lints.rustdoc]
unescaped_backticks = "warn"

[package.metadata.cargo-machete]
ignored = ["chunkedge_ident_macros"]
