[package]
name = "chunkedge_advancement"
description = "Advancement support for ChunkEdge"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
rustc-hash.workspace = true
chunkedge_binary.workspace = true
chunkedge_generated.workspace = true
chunkedge_server.workspace = true
