[package]
name = "chunkedge_binary"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
derive_more = { workspace = true, features = [
    "as_ref",
    "deref",
    "deref_mut",
    "from",
    "into",
] }
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chunkedge_generated.workspace = true
chunkedge_ident.workspace = true
chunkedge_math.workspace = true
chunkedge_nbt = { workspace = true, features = ["binary"] }
chunkedge_protocol_macros.workspace = true
chunkedge_text.workspace = true

[dev-dependencies]
# rand is only used in tests
rand.workspace = true

[lints]
workspace = true
