[package]
name = "chunkedge_boss_bar"
description = "Boss bar API for ChunkEdge"
readme = "README.md"
keywords = ["minecraft", "bossbar", "api"]
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
derive_more = { workspace = true, features = [
    "deref",
    "deref_mut",
] }
chunkedge_entity.workspace = true
chunkedge_server.workspace = true
