[package]
name = "chunkedge_entity"
description = "Minecraft entities for ChunkEdge"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
derive_more = { workspace = true, features = [
    "deref",
    "deref_mut",
] }
indexmap.workspace = true
paste.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
chunkedge_binary.workspace = true
chunkedge_generated.workspace = true
chunkedge_math.workspace = true
chunkedge_nbt.workspace = true
chunkedge_protocol.workspace = true
chunkedge_server_common.workspace = true

[build-dependencies]
anyhow.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
chunkedge_build_utils.workspace = true
chunkedge_generated.workspace = true

[package.metadata.cargo-machete]
ignored = ["heck","proc-macro2","quote","serde","serde_json","chunkedge_build_utils", "chunkedge_nbt"]
