[package]
name = "chunkedge_equipment"
description = "Equipment support for ChunkEdge"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
tracing.workspace = true
chunkedge_server.workspace = true
chunkedge_inventory.workspace = true
