[package]
name = "chunkedge_item"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
uuid.workspace = true
chunkedge_binary.workspace = true
chunkedge_generated.workspace = true
chunkedge_ident.workspace = true
chunkedge_nbt.workspace = true
chunkedge_text.workspace = true

[lints]
workspace = true
