[package]
name = "chunkedge_registry"
description = "Dynamic registries for ChunkEdge"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chunkedge_ident.workspace = true
chunkedge_nbt = { workspace = true, features = ["serde"] }
chunkedge_protocol.workspace = true
chunkedge_server_common.workspace = true
