[package]
name = "chunkedge_server"
description = "The core of the ChunkEdge server"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
byteorder.workspace = true
bytes.workspace = true
derive_more = { workspace = true, features = ["deref", "deref_mut", "from", "into"] }
parking_lot.workspace = true
rand.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
uuid.workspace = true
chunkedge_binary.workspace = true
chunkedge_entity.workspace = true
chunkedge_generated.workspace = true
chunkedge_math.workspace = true
chunkedge_nbt.workspace = true
chunkedge_protocol.workspace = true
chunkedge_registry.workspace = true
chunkedge_server_common.workspace = true
