[package]
name = "chunkedge_text"
description = "Parsing and writing Minecraft's JSON text format"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bitfield-struct.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde"] }
chunkedge_ident.workspace = true
chunkedge_nbt.workspace = true
