[package]
name = "valence_advancement"
description = "Advancement support for Valence"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
derive_more = {workspace = true, features = [
    "deref",
    "deref_mut",
] }
rustc-hash.workspace = true
valence_binary.workspace = true
valence_generated.workspace = true
valence_server.workspace = true
