[package]
name = "valence_binary"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
derive_more = { workspace = true, features = [
    "as_ref",
    "deref",
    "deref_mut",
    "from",
    "into",
] }
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
valence_generated.workspace = true
valence_ident.workspace = true
valence_math.workspace = true
valence_nbt = { workspace = true, features = ["binary"] }
valence_protocol_macros.workspace = true
valence_text.workspace = true

[dev-dependencies]
# rand is only used in tests
rand.workspace = true

[lints]
workspace = true
