[package]
name = "valence_entity"
description = "Minecraft entities for Valence"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
derive_more = { workspace = true, features = [
    "deref",
    "deref_mut",
] }
indexmap.workspace = true
paste.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
valence_binary.workspace = true
valence_generated.workspace = true
valence_math.workspace = true
valence_nbt.workspace = true
valence_protocol.workspace = true
valence_server_common.workspace = true

[build-dependencies]
anyhow.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
valence_build_utils.workspace = true
valence_generated.workspace = true

[package.metadata.cargo-machete]
ignored = ["heck","proc-macro2","quote","serde","serde_json","valence_build_utils", "valence_nbt"]
