[package]
name = "valence_generated"
description = "Generated code for valence and valence_protocol"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
build = "build/main.rs"

[lints]
workspace = true

[dependencies]
valence_ident.workspace = true
valence_math.workspace = true

[build-dependencies]
anyhow.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
valence_build_utils.workspace = true

[package.metadata.cargo-machete]
ignored = ["anyhow", "heck","proc-macro2","quote","serde","serde_json","valence_build_utils","valence_math"]
