[package]
name = "valence_protocol"
description = "Protocol library for Minecraft: Java Edition"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
encryption = ["dep:aes", "dep:cfb8"]
compression = ["dep:flate2"]

[dependencies]
aes = { workspace = true, optional = true }
anyhow.workspace = true
base64.workspace = true
bevy_ecs.workspace = true # TODO: make this optional
bitfield-struct.workspace = true
byteorder.workspace = true
bytes.workspace = true
cfb8 = { workspace = true, optional = true }
derive_more = { workspace = true, features = [
  "from",
  "into",
  "deref",
  "deref_mut",
  "as_ref",
] }
flate2 = { workspace = true, optional = true }
indexmap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
valence_binary.workspace = true
valence_generated.workspace = true
valence_ident.workspace = true
valence_item.workspace = true
valence_math.workspace = true
valence_nbt = { workspace = true, features = ["binary"] }
valence_protocol_macros.workspace = true
valence_text.workspace = true

[dev-dependencies]
rand.workspace = true
