[package]
name = "valence_registry"
description = "Dynamic registries for Valence"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
valence_ident.workspace = true
valence_nbt = { workspace = true, features = ["serde"] }
valence_protocol.workspace = true
valence_server_common.workspace = true
