[package]
name = "valence_scoreboard"
description = "Scoreboard support for Valence"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
derive_more = { workspace = true, features = [
    "deref",
    "deref_mut",
] }
tracing.workspace = true
valence_server.workspace = true
