[package]
name = "valence_server"
description = "The core of the Valence server"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
byteorder.workspace = true
bytes.workspace = true
derive_more = { workspace = true, features = ["deref", "deref_mut", "from", "into"] }
parking_lot.workspace = true
rand.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
uuid.workspace = true
valence_binary.workspace = true
valence_entity.workspace = true
valence_generated.workspace = true
valence_math.workspace = true
valence_nbt.workspace = true
valence_protocol.workspace = true
valence_registry.workspace = true
valence_server_common.workspace = true
