[package]
name = "valence_server_common"
description = "Common code for the valence_server family of crates"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
derive_more = { workspace = true, features = [
    "deref",
] }
rand.workspace = true
uuid.workspace = true
valence_protocol.workspace = true