[package]
name = "packet_inspector"
description = "A simple Minecraft proxy for inspecting packets."
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
eframe = { workspace = true, features = [
    "persistence",
    "wgpu",
] }
egui.workspace = true
egui_dock = { workspace = true, features = ["serde"] }
flate2.workspace = true
flume.workspace = true
image.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
syntect = { workspace = true, default-features = false, features = [
    "default-fancy",
] }
time = { workspace = true, features = ["local-offset"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
valence_binary.workspace = true
valence_protocol = { workspace = true, features = ["compression"] }

[build-dependencies]
anyhow.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syn.workspace = true
valence_build_utils.workspace = true

[package.metadata.cargo-machete]
ignored = ["heck", "proc-macro2", "quote", "serde_json", "syn", "valence_build_utils"]
