[package]
name = "playground"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
chunkedge.workspace = true
chunkedge_math.workspace = true
chunkedge_server_common.workspace = true

[package.metadata.cargo-machete]
ignored = ["anyhow", "tracing-subscriber", "chunkedge_math", "chunkedge_server_common"]
