[package]
name = "playground"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
valence.workspace = true
valence_math.workspace = true
valence_server_common.workspace = true

[package.metadata.cargo-machete]
ignored = ["anyhow", "tracing-subscriber", "valence_math", "valence_server_common"]
